# logic_way

./: .gitignore  LICENSE  README.md  pyproject.toml
logicway/: alembic.ini  db.sqlite3  manage.py
logicway/alembic/: env.py
logicway/alembic/versions/: fef3d615c67f_initial_migration.py
logicway/database/: database.py  fetch_data_and_convert_to_json.py  load_data.py  models.py  upload_data.py  urls.py  views.py
logicway/database/tests/: AJAX_test.py  __init__.py  models_database_test.py  settings_test.py
logicway/logicway/: asgi.py  settings.py  urls.py  wsgi.py
logicway/map/: api_manual_testing.http  urls.py  views.py
logicway/map/static/map/js/: map.js
logicway/map/templates/map/: map.html
logicway/scraper/: forms.py  models.py  scraper.py  urls.py  views.py
logicway/scraper/migrations/: 0001_initial.py
logicway/scraper/templates/scraper/: form.html  result.html
